--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,7 @@
     Links:
     <ul>
       <li><a href="https://my-testing-domain.com">https://my-testing-domain.com</a></li>
-      <li><a href="https://my-testing-domain.com/run_tests.sh">https://my-testing-domain.com/run_tests.sh/a></li>
+      <li><a href="https://my-testing-domain.com/run_tests.sh">https://my-testing-domain.com/run_tests.sh</a></li>
       <li><a href="https://my-testing-domain.com:443">https://my-testing-domain.com:443</a></li>
       <li><a href="https://my-testing-domain.com:443/run_tests.sh">https://my-testing-domain.com:443/run_tests.sh</a></li>
     </ul>
