--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<a href="https://xvx.cz/">https://xvx.cz/</a>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Test</h1>
+
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/6/61/Gnupg_logo.svg" alt="GnuPG logo" title="GnuPG logo"></p>
+
+</body>
+</html>
